--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
-    "pg": "^8.6.0",
-    "dotenv": "^9.0.2"
+    "pg": "^8.6.0"
   },
   "engines": {
     "node": "14.x"
