--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "library",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "engines": {
+    "node": "^14",
+    "npm": "^6.14"
+  },
+  "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +18,16 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
-    "pg": "^8.6.0"
+    "express": "^4.18.1",
+    "knex": "^2.1.0",
+    "node-fetch": "^2.6.7",
+    "nodemon": "^2.0.18",
+    "pg": "^8.7.3",
+    "ts-node": "^10.8.1",
+    "typescript": "^5.0.2"
   },
-  "engines": {
-    "node": "14.x"
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13"
   }
 }
